Configure rustfmt to wrap comments
This seems very helpful for my day-to-day use (I develop with nightly by
default). I'm going to update the CI build, so we may benefit from
global enforcement of unstable rustfmt options too.

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,1 +1,8 @@
 max_width = 80
+
+# This option is unstable. Tracking issue:
+# https://github.com/rust-lang/rustfmt/issues/3347
+#
+# When run on stable, this results in a warning and has no effect, but it can
+# help when working with nightly.
+wrap_comments = true
