Run examples as part of CI build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,9 @@ jobs:
         env:
           RUSTDOCFLAGS: -D warnings
         run: cargo doc
+
+      - name: Run examples
+        run: |
+          for example in examples/*; do
+            cargo run -- "$example"
+          done
