--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "stack-assembly"
 version = "0.1.0"
 edition = "2024"
+description = "minimalist, stack-based, assembly-like programming language"
+license = "0BSD"
+repository = "https://github.com/hannobraun/stack-assembly"
 
 [dependencies.bytemuck]
 version = "1.24.0"
