Move `stack-assembly` crate to `crates/` directory
Add a workspace at the repository root to preserve the previous behavior
of running Cargo commands there.

This is preparation for having multiple crates in the future.
Specfically, I want to split the example host into its own crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,3 @@
-[package]
-name = "stack-assembly"
-version = "0.1.0"
-edition = "2024"
-description = "minimalist, stack-based, assembly-like programming language"
-license = "0BSD"
-repository = "https://github.com/hannobraun/stack-assembly"
-
-[dependencies.bytemuck]
-version = "1.24.0"
-features = ["derive"]
+[workspace]
+resolver = "3"
+members = ["crates/stack-assembly"]
