Specify most `[package]` keys in workspace
This is more preparation for adding additional crates, which are going
to share this configuration.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,10 @@
 [workspace]
 resolver = "3"
 members = ["crates/stack-assembly"]
+
+[workspace.package]
+version = "0.1.0"
+edition = "2024"
+description = "minimalist, stack-based, assembly-like programming language"
+license = "0BSD"
+repository = "https://github.com/hannobraun/stack-assembly"
