--- a/crates/stack-assembly/Cargo.toml
+++ b/crates/stack-assembly/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "stack-assembly"
-version = "0.1.0"
-edition = "2024"
-description = "minimalist, stack-based, assembly-like programming language"
-license = "0BSD"
-repository = "https://github.com/hannobraun/stack-assembly"
+version.workspace = true
+edition.workspace = true
+description.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies.bytemuck]
 version = "1.24.0"
