--- a/crates/stack-assembly-example-host/Cargo.toml
+++ b/crates/stack-assembly-example-host/Cargo.toml
@@ -7,5 +7,9 @@ description.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[dependencies.clap]
+version = "*"
+features = ["derive"]
+
 [dependencies.stack-assembly]
 path = "../stack-assembly"
