Add dependency on `anyhow` to example host
I'm going to use it to improve the error messages.

--- a/crates/stack-assembly-example-host/Cargo.toml
+++ b/crates/stack-assembly-example-host/Cargo.toml
@@ -7,6 +7,9 @@ description.workspace = true
 license.workspace = true
 repository.workspace = true
 
+[dependencies]
+anyhow = "*"
+
 [dependencies.clap]
 version = "*"
 features = ["derive"]
